<resources>
    <string name="app_name">海媚</string>
    <string name="hello_android">Hello Android!</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_diary">小本本</string>
    <string name="tab_plans">想做的事</string>
    <string name="home_placeholder">Home overview will appear here.</string>
    <string name="profile_placeholder">Profile editing will appear here.</string>
    <string name="diary_placeholder">Diary list will appear here.</string>
    <string name="plans_placeholder">Plans list will appear here.</string>
    <string name="home_name_placeholder">她的昵称</string>
    <string name="home_birthday_placeholder">距离她生日还有 0 天</string>
    <string name="home_zodiac_placeholder">星座</string>
    <string name="home_zodiac_traits_placeholder">点击完善她的资料</string>
    <string name="home_latest_diary_title">最近一条日记</string>
    <string name="home_latest_diary_placeholder">还没有日记，去写第一条吧</string>
    <string name="home_add_diary">新增日记</string>
    <string name="profile_title">她的资料</string>
    <string name="profile_name_label">昵称/姓名</string>
    <string name="profile_save_name">保存昵称</string>
    <string name="profile_birthday_label">生日</string>
    <string name="profile_birthday_placeholder">未设置</string>
    <string name="profile_birthday_edit">修改生日</string>
    <string name="profile_zodiac_label">星座</string>
    <string name="profile_zodiac_placeholder">未计算</string>
    <string name="profile_zodiac_traits_label">星座特点</string>
    <string name="profile_save_traits">保存特点</string>
    <string name="profile_edit">编辑</string>
    <string name="profile_done">完成</string>
    <string name="profile_name_display">姓名：-</string>
    <string name="profile_birthday_display">生日：-</string>
    <string name="profile_zodiac_display">星座：-</string>
    <string name="profile_traits_display">特点：-</string>
    <string name="profile_name_value">姓名：%1$s</string>
    <string name="profile_birthday_value">生日：%1$s</string>
    <string name="profile_zodiac_value">星座：%1$s</string>
    <string name="profile_traits_value">特点：%1$s</string>
    <string name="profile_edit_entry">编辑资料</string>
    <string name="profile_lunar_birthday_display">农历生日：-</string>
    <string name="profile_lunar_birthday_value">农历生日：%1$s</string>
    <string name="home_birthday_solar_placeholder">公历生日：-</string>
    <string name="home_birthday_lunar_placeholder">农历生日：-</string>
    <string name="home_birthday_countdown_solar_placeholder">公历生日：还有 0 天</string>
    <string name="home_birthday_countdown_lunar_placeholder">农历生日：还有 0 天</string>
    <string name="profile_lunar_fixed_note">农历生日为固定值</string>
    <string name="diary_search_hint">搜索标题、内容或标签</string>
    <string name="diary_filter_label">心情筛选</string>
    <string name="diary_filter_mood_all">全部</string>
    <string name="diary_filter_mood_happy">😊</string>
    <string name="diary_filter_mood_calm">🙂</string>
    <string name="diary_filter_mood_neutral">😐</string>
    <string name="diary_filter_mood_sad">😔</string>
    <string name="diary_filter_mood_angry">😤</string>
    <string name="diary_empty_title">还没有日记</string>
    <string name="diary_empty_subtitle">记录第一次心动的瞬间吧</string>
    <string name="diary_add_entry">新增日记</string>
    <string name="diary_edit_add_title">新增日记</string>
    <string name="diary_edit_edit_title">编辑日记</string>
    <string name="diary_edit_title_hint">标题（可选）</string>
    <string name="diary_edit_content">内容</string>
    <string name="diary_edit_content_hint">写下今天的心情或事件...</string>
    <string name="diary_edit_tags">标签</string>
    <string name="diary_edit_tags_hint">例如：约会, 纪念日</string>
    <string name="diary_edit_mood">心情</string>
    <string name="diary_edit_time">时间</string>
    <string name="diary_edit_pick_time">选择日期</string>
    <string name="diary_edit_save">保存</string>
    <string name="diary_edit_delete">删除</string>
    <string name="diary_edit_content_required">内容不能为空</string>
    <string name="diary_edit_delete_confirm">确定要删除这条日记吗？</string>
    <string name="diary_edit_images">图片</string>
    <string name="diary_edit_pick_images">从相册选择</string>
    <string name="diary_image_hint">含图片</string>
    <string name="diary_image_preview">图片预览</string>
    <string name="diary_image_delete">删除图片</string>
</resources>